fixed alignment in skill__text__box

--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Noto+Serif:wght@400;700&display=swap');
 
-.placeholder {
-    color: #F8BD7F;
-    color: #FFA41B;
-    color: #E25822
-
-}
-
-
 * {
     margin: 0;
     padding: 0;
@@ -103,6 +95,7 @@ a:hover {
 }
 
 .skills__wrapper {
+
     display: grid;
     place-items: center;
     grid-template-columns: repeat(3, 1fr);
@@ -116,6 +109,7 @@ a:hover {
 }
 
 .skill__text__box {
+    align-self: start;
     text-align: center;
 }
 
